Final report bibliography not working perfectly

--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,13 @@ __pycache__/
 exdata/
 ppdata/
 *.aux
-latex/*.log
-latex/*.gz
-latex/*.aux
-latex/*.dvi
-latex/*.snm
-latex/*.toc
-latex/*.nav
+*.gz
+*.dvi
+*.ps
+*.bbl
+*.blg
+*.log
+*.aux
+*.snm
+*.toc
+*.nav
